feat: Add currency (#173)
* feat: add currency to courses

* feat: add currency field to course form - admin

* refactor: use currency from response instead of hardcoding

---------
