# apps/api/src/swagger/api-schema.json
@@ -1774,6 +1774,9 @@
                 },
                 "priceInCents": {
                   "type": "number"
+                },
+                "currency": {
+                  "type": "string"
                 }
               },
               "required": [
@@ -1787,7 +1790,8 @@
                 "completedLessonCount",
                 "enrolled",
                 "enrolledParticipantCount",
-                "priceInCents"
+                "priceInCents",
+                "currency"
               ]
             }
           },
@@ -1864,6 +1868,9 @@
                 },
                 "priceInCents": {
                   "type": "number"
+                },
+                "currency": {
+                  "type": "string"
                 }
               },
               "required": [
@@ -1877,7 +1884,8 @@
                 "completedLessonCount",
                 "enrolled",
                 "enrolledParticipantCount",
-                "priceInCents"
+                "priceInCents",
+                "currency"
               ]
             }
           },
@@ -1954,6 +1962,9 @@
                 },
                 "priceInCents": {
                   "type": "number"
+                },
+                "currency": {
+                  "type": "string"
                 }
               },
               "required": [
@@ -1967,7 +1978,8 @@
                 "completedLessonCount",
                 "enrolled",
                 "enrolledParticipantCount",
-                "priceInCents"
+                "priceInCents",
+                "currency"
               ]
             }
           },
@@ -2081,6 +2093,9 @@
               },
               "priceInCents": {
                 "type": "number"
+              },
+              "currency": {
+                "type": "string"
               }
             },
             "required": [
@@ -2094,7 +2109,8 @@
               "enrolled",
               "state",
               "lessons",
-              "priceInCents"
+              "priceInCents",
+              "currency"
             ]
           }
         },
